# misexpress

./: .dockerignore  .env.example  .gitignore  Dockerfile.prod  docker-compose.prod.yml  entrypoint.sh  manage.py  products_generator.py  pyproject.toml  requirements.txt
client/: Dockerfile.prod  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
client/app/: globals.css  imageLoader.ts  layout.tsx  page.tsx  providers.tsx
client/app/Footer/: Footer.tsx
client/app/Header/: Header.tsx
client/app/YMap/: ymap.tsx
client/app/about/: page.tsx
client/app/basket/: page.tsx
client/app/catalog/: page.tsx
client/app/category/: page.tsx
client/app/contacts/: page.tsx
client/app/delivery/: page.tsx
client/app/favorites/: page.tsx
client/app/manufacturers/: page.tsx
client/app/order/: page.tsx
client/app/payment/: page.tsx
client/app/product/: page.tsx
mssite/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
nginx/: default.conf
products/: admin.py  apps.py  models.py  permissions.py  serializers.py  validators.py  views.py
products/services/: products_filter_service.py  products_filters.py  products_service.py
users/: admin.py  models.py  permissions.py  serializers.py  views.py
users/services/: cart_service.py  reviews_filters.py  reviews_service.py  user_service.py
